# combinario

./: .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  dockerfile  entrypoint.sh  index.html  readme  requirements  style.css
.github/workflows/: ci.yaml
combinario/: app.py  config.py  dependencies.py  pyproject.toml  schemas.py  seed.py  worker.py
combinario/core/db/: __init__.py  dependencies.py  exceptions.py  models.py  settings.py
combinario/core/db/repositories/: item.py
combinario/core/llm/: model.py  settings.py
combinario/core/redis/: dependencies.py  settings.py
combinario/db/: repository.py
combinario/dbmanager/: dbmanager.py
combinario/schemas/: item.py  job.py  parent.py
combinario/static/css/: style.css
combinario/static/js/: stars.js
combinario/templates/: index.html
migrations/: env.py
migrations/versions/: 7f84efe3eb9c_initial.py  c2ba62408b75_unique_constraint.py
models/: readme
