[project]
name = "combinario"
version = "0.1.0"
description = "merge two words and let AI create a brand-new concept."
authors = [
    {name = "JarasIau",email = "jaraslau@tutanota.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "orjson (>=3.11.6,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "openai (>=2.16.0,<3.0.0)",
    "arq (>=0.27.0,<0.28.0)",
    "pydantic-settings (>=2.13.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.mypy]
plugins = ["pydantic.mypy"]
[dependency-groups]
dev = [
    "ruff (>=0.15.7,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
